--- a/scripts/paper-analysis/graph.html
+++ b/scripts/paper-analysis/graph.html
@@ -1,19 +1,11 @@
-{% extends "layout.html" %}
-{% block links %}
-<span id="logged_in_name">{{login_name}}</span> &nbsp;
-<a class="button mobile-nav" href="#">Menu</a>
-<a class="button navitem nav_papers" href="/{{conf}}/papers">My Papers</a>
-<a class="button navitem nav_schedule" href="/{{conf}}/schedule">My Schedule</a>
-<a class="button navitem nav_meetups" href="/{{conf}}/meetups">My Meetups</a>
 
-{% if login_id %}
-<a class="button navitem" href="/logout">Log Out</a>
-{% else %}
-<a class="button navitem" href="/login?redirect_url=/{{conf}}/papers">Log In</a>
-{% endif %}
-{% endblock %}
-{% block content %} 
-<style>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Force-Directed Layout</title>
+  <script type="text/javascript" src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
+  <style>
+
   .link {
     stroke: #ccc;
   }
@@ -23,8 +15,11 @@
     font: 10px sans-serif;
   }
 
-</style>
+  </style>
+</head>
 
+
+<body>
 <script>
 
 var width = 1600,
@@ -42,7 +37,7 @@ var force = d3.layout.force()
     .charge(-100)
     .size([width, height]);
 
-d3.json("/{{conf}}/network_graph", function(json) {
+d3.json("data.json", function(json) {
   force
       .nodes(json.nodes)
       .links(json.links)
@@ -80,7 +75,5 @@ d3.json("/{{conf}}/network_graph", function(json) {
 
 </script>
 
-
-
-
-{% endblock %}
+</body>
+</html>
