--- a/scripts/analysis/paper-person-graph.html
+++ b/scripts/analysis/paper-person-graph.html
@@ -37,7 +37,7 @@ var force = d3.layout.force()
     .charge(-100)
     .size([width, height]);
 
-d3.json("data.json", function(json) {
+d3.json("paper-person-graph-data.json", function(json) {
   force
       .nodes(json.nodes)
       .links(json.links)
