--- a/scripts/paper-assign/index.html
+++ b/scripts/paper-assign/index.html
@@ -156,7 +156,7 @@ function enableClicks() {
         $(this).sortable( "enable" );
     });
     $("#papers").sortable("enable");
-    $("#sessions").sortable( "disable" );
+    $("#sessions").sortable( "enable" );
 
 }
 
